# Time-Fo-Flight-Sensor-Simulation

./: .gitignore  ADAPT  AUTHORS  CMakeLists.txt  LICENSE  masterthesis-config.cmake
source/: CMakeLists.txt
source/Augmented_Reality/: CMakeLists.txt
source/Augmented_Reality/01_ArUco_Marker_Detection/: CMakeLists.txt  main.cpp
source/CoreSystems/: CMakeLists.txt
source/CoreSystems/include/CoreSystems/: BowBasicTimer.h  BowCorePredeclares.h  BowCoreSystems.h  BowLogger.h  BowMath.h
source/CoreSystems/include/CoreSystems/DesignPattern/: IBowCleanableObserver.h
source/CoreSystems/include/CoreSystems/Geometry/: BowMeshAttribute.h  BowSphereTessellator.h
source/CoreSystems/include/CoreSystems/Math/: BowAABB.h  BowFrustum.h  BowMatrix.h  BowMatrix2D.h  BowMatrix2x2.h  BowMatrix3D.h  BowMatrix3x3.h  BowMatrix4x4.h  BowPlane.h  (+9 more)
source/CoreSystems/source/: BowBasicTimer.cpp  BowLogger.cpp
source/CoreSystems/source/Geometry/: BowMeshAttribute.cpp  BowSphereTessellator.cpp
source/CoreSystems/source/Math/: BowAABB.cpp  BowSVD.cpp
source/Examples/: CMakeLists.txt
source/Examples/00_TimerTest/: CMakeLists.txt  main.cpp
source/Examples/01_Input/: CMakeLists.txt  main.cpp
source/Examples/02_HelloWorld/: CMakeLists.txt  main.cpp
source/Examples/03_Triangle/: CMakeLists.txt  main.cpp
source/Examples/04_MeshRenderer/: CMakeLists.txt  FirstPersonCamera.cpp  FirstPersonCamera.h  main.cpp
source/Examples/05_SceneRenderer/: CMakeLists.txt  FirstPersonCamera.cpp  PbrtScene.cpp  PbrtScene.h  main.cpp
source/InputDevice/: CMakeLists.txt
source/InputDevice/include/InputDevice/: BowInput.h  BowInputDeviceManager.h  BowInputPredeclares.h  IBowInputDevice.h  IBowKeyboard.h  IBowMouse.h
source/InputDevice/source/: BowInputDeviceManager.cpp
source/InputDeviceImplementations/: CMakeLists.txt
source/InputDeviceImplementations/DirectInputDevice/: CMakeLists.txt
source/InputDeviceImplementations/DirectInputDevice/source/: BowDIInputDevice.cpp  BowDIInputDeviceBase.cpp  BowDIKeyboardDevice.cpp  BowDIMouseDevice.cpp  BowDITypeConverter.cpp  DLLExport.cpp
source/InputDeviceImplementations/NativeInputDevice/: CMakeLists.txt
source/InputDeviceImplementations/NativeInputDevice/source/: BowNativeInputDevice.cpp  BowNativeKeyboardDevice.cpp  BowNativeMouseDevice.cpp  BowNativeTypeConverter.cpp  DLLExport.cpp
source/Libraries/: CMakeLists.txt
source/Libraries/CameraUtils/: CMakeLists.txt  cuda_config.h.in
source/Libraries/CameraUtils/source/: BowApplication.cpp  CameraCalibration.cpp  FirstPersonCamera.cpp  PCLRenderer.cpp  RenderingConfigs.cpp
source/Libraries/EvaluationUtils/: CMakeLists.txt
source/Libraries/EvaluationUtils/source/: ArucoHelper.cpp  DataLoader.cpp
source/Libraries/OptixUtils/: CMakeLists.txt
source/Libraries/OptixUtils/source/: Mesh.cpp  OptiXMesh.cpp  helpers.cpp  rply.c  sutil.cpp  tiny_obj_loader.cc
source/Platform/: CMakeLists.txt
source/Platform/include/Platform/: BowFileReader.h  BowFileWriter.h  BowPlatform.h  BowPlatformPredeclares.h
source/Platform/source/: BowFileReader.cpp  BowFileWriter.cpp
source/RenderDevice/: CMakeLists.txt
source/RenderDevice/include/RenderDevice/: BowCamera.h  BowClearState.h  BowRenderDeviceManager.h  BowRenderDevicePredeclares.h  BowRenderState.h  BowRenderer.h  IBowRenderDevice.h
source/RenderDevice/source/: BowCamera.cpp  BowRenderDeviceManager.cpp
source/RenderDeviceImplementations/: CMakeLists.txt
source/RenderDeviceImplementations/DirectX11RenderDevice/: CMakeLists.txt
source/RenderDeviceImplementations/DirectX11RenderDevice/source/: BowD3D11RenderDevice.cpp  BowD3D11TypeConverter.cpp  BowD3D11Utils.cpp  DLLExport.cpp
source/RenderDeviceImplementations/OpenGL3xRenderDevice/: CMakeLists.txt
source/RenderDeviceImplementations/OpenGL3xRenderDevice/source/: BowOGL3xRenderDevice.cpp  BowOGL3xTypeConverter.cpp  DLLExport.cpp
source/Resources/: CMakeLists.txt
source/Resources/include/Resources/: BowResource.h  BowResourceManager.h  BowResources.h  BowResourcesPredeclares.h
source/Resources/source/: BowResource.cpp  BowResourceManager.cpp
source/Resources/source/ResourceManagers/: BowImageManager.cpp  BowMaterialManager.cpp  BowMeshManager.cpp  BowPointCloudManager.cpp
source/Resources/source/Resources/: BowImage.cpp  BowMaterial.cpp  BowMesh.cpp  BowPointCloud.cpp
source/TOF_Evaluation/: CMakeLists.txt
source/TOF_Evaluation/00_RadialDistortionVisualization/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/01_NoiseAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/02_TemperatureAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/03_SystematicErrorAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/03_SystematicErrorAnalysis_2/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/04_MixedPixelsAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/05_MultiplePathErrorAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/06_LensScatteringAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/07_LedPositionAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/08_MaterialAnalysis/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/09_SystematicErrorAnalysis_Simulation/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/10_Multiple_Path_Path_Length_Simulation/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/11_Multiple_Path_Roughness_Simulation/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/12_Lens_Scattering_Simulation/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/12_Lens_Scattering_Simulation_2/: CMakeLists.txt  main.cpp
source/TOF_Evaluation/13_Depth_Visualisation/: CMakeLists.txt  main.cpp
source/TOF_Simulation/: CMakeLists.txt
source/TOF_Simulation/01_RayTracing/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
source/TOF_Simulation/02_PathTracing/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
source/TOF_Simulation/03_TimeOfFlightRendering/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
source/Tests/: CMakeLists.txt
source/Tests/CoreSystems-test/: CMakeLists.txt  logger_test.cpp
(+298 files in other folders)
