add_subdirectory(00_RadialDistortionVisualization)
add_subdirectory(01_NoiseAnalysis)
add_subdirectory(02_TemperatureAnalysis)
add_subdirectory(03_SystematicErrorAnalysis)
add_subdirectory(03_SystematicErrorAnalysis_2)
add_subdirectory(04_MixedPixelsAnalysis)
add_subdirectory(05_MultiplePathErrorAnalysis)
add_subdirectory(06_LensScatteringAnalysis)
add_subdirectory(07_LedPositionAnalysis)
add_subdirectory(08_MaterialAnalysis)
add_subdirectory(09_SystematicErrorAnalysis_Simulation)
add_subdirectory(10_Multiple_Path_Path_Length_Simulation)
add_subdirectory(11_Multiple_Path_Roughness_Simulation)
add_subdirectory(12_Lens_Scattering_Simulation)
add_subdirectory(12_Lens_Scattering_Simulation_2)
add_subdirectory(13_Depth_Visualisation)
